--- a/index.html
+++ b/index.html
@@ -205,12 +205,11 @@
 
       </div>
     </div>
-
     <div class="row">
-      <div class="card col-xs-12 col-sm-12">
-        <h2 class="title">BACK TO TOP</h2>
+      <div class="card footer col-xs-12 col-sm-12">
+        <p>Thanks for visiting! <span class="love">♥</span></p>
       </div>
-</div>
+    </div>
     <!--end of Main container-->
   </div>
 
