updated main image link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="card col-xs-12 col-sm-5">
         <div class="img-container">
-          <img src="./img/aaron-ford-ghw.jpg" alt="Aaron Ford">
+          <img src="./img/aaron-ford-resume.jpg" alt="Aaron Ford">
         </div>
       </div>
 
