bolded contact links, minor changes to styles and text

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
           <h3>Front-End Web Developer</h3>
           <!-- <h2 class="title">ABOUT ME</h2>
           <hr> -->
-          <p class="summary-text">Front-End Web Developer striving to make the world a better place, one amazing user experience at a time. I love design, details, and writing clean, semantic code. I possess a strong background in Digital Marketing, SEO, and eCommerce (Shopify),
-            but have found my true calling in web development.</p>
+          <p class="summary-text">Front-End Web Developer striving to make the world a better place, one amazing user experience at a time. I love design, details, and writing clean, semantic code. I possess a strong technical background with over 6 years in Digital Marketing, SEO, and eCommerce (Shopify), but have found my true calling in web development.</p>
           <ul class="list-unstyled contact-list">
             <li>
               <a href="mailto:aaron@aaronford.net"><i class="far fa-envelope"></i> aaron@aaronford.net</a>
@@ -177,7 +176,6 @@
           <h5>July 2018 to Sept. 2018 - Vancouver, BC</h5>
           <p>A full-time immersive web development program, covering topics such as JavaScript, React, Node.js, MongoDB, PostgreSQL, Ruby, Ruby on Rails, jQuery, HTML, CSS, and SASS.</p>
         </section>
-
       </div>
     </div>
     <div class="row">
