links open in new window

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
               <a href="tel:+17789261236"><i class="fas fa-mobile-alt"></i> 778-926-1236
               </li></a>
               <li>
-                <a href="https://github.com/aaronfordnet/"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://github.com/aaronfordnet/" target="_blank"><i class="fab fa-github"></i> GitHub</a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/aaronford/"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                <a href="https://www.linkedin.com/in/aaronford/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
               </li>
               <li>
-                <a href="https://resume.creddle.io/resume/g4vl3tza0kr"><i class="far fa-arrow-alt-circle-down"></i> Printable resume</a>
+                <a href="https://resume.creddle.io/resume/g4vl3tza0kr" target="_blank"><i class="far fa-arrow-alt-circle-down"></i> Printable resume</a>
               </li>
           </ul>
         </div>
