--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
       </div>
       <div class="card col-xs-12 col-sm-12 employment-container">
         <section class="employment">
+          <h4>Front-End Developer - Machobear Studio</h4>
+          <h5>Sept. 2018 to Present - Vancouver, BC</h5>
+          <p></p>
+        </section>
+        <section class="employment">
           <h4>Front-End Web Developer - Freelance</h4>
           <h5>Jan. 2018 to July 2018 - New York, NY</h5>
           <p>Installed, configured, and customized WordPress and Shopify themes to meet client specifications. Fixed bugs, researched and performed 3rd party app integrations, and added custom features using HTML, CSS, JavaScript, and Liquid.</p>
